[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nonebot-plugin-llm-qa-system"
version = "0.1.0"
description = "基于 Ollama + RAG 的智能问答系统"
readme = "README.md"
authors = [ { name = "BG4JEC", email = "BG4JEC@hotmail.com" } ]
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["nonebot", "nonebot2", "ollama", "rag", "qa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Framework :: NoneBot",
]
dependencies = [
    "nonebot2>=2.0.0,<3.0.0",
    "nonebot-adapter-onebot>=2.0.0,<3.0.0",
    "nonebot-plugin-orm>=1.0.0",
    "httpx>=0.24.0",
]

[project.urls]
homepage = ""
repository = ""

[tool.nonebot]
plugins = ["nonebot_plugin_llm_qa_system"]
