[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nonebot-plugin-llm-qa-system"
version = "0.3.0"
description = "基于 Ollama + RAG 的智能问答系统"
readme = "README.md"
authors = ["BG4JEC <BG4JEC@hotmail.com>"]
license = "MIT"
urls = { Repository = "https://github.com/2580m/nonebot-plugin-llm-qa-system" }
keywords = ["nonebot", "nonebot2", "ollama", "rag", "qa"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.9"
nonebot2 = ">=2.0.0,<3.0.0"
nonebot-adapter-onebot = ">=2.0.0,<3.0.0"
nonebot-plugin-orm = ">=0.8.3"
httpx = ">=0.24.0"
jieba_next = "*"
cachetools = ">=5.3.0"

[tool.nonebot]
plugins = ["nonebot_plugin_llm_qa_system"]
